# vekn-seating-generator

./: Cargo.toml
src/: main.rs  round.rs
