[package]
name = "VEKN-Seating-Generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
throw = "0.1.7" 
thiserror = "2.0.0"
rand = "0.8.5"
shuffle = "0.1.7"
